Enabled or disabled a lot of Thermal Foundation gear

--- a/config/cofh/thermalfoundation/common.cfg
+++ b/config/cofh/thermalfoundation/common.cfg
@@ -87,10 +87,10 @@ Equipment {
         }
 
         Steel {
-            B:Boots=true
-            B:Chestplate=true
-            B:Helmet=true
-            B:Leggings=true
+            B:Boots=false
+            B:Chestplate=false
+            B:Helmet=false
+            B:Leggings=false
         }
 
         Electrum {
@@ -108,10 +108,10 @@ Equipment {
         }
 
         Bronze {
-            B:Boots=true
-            B:Chestplate=true
-            B:Helmet=true
-            B:Leggings=true
+            B:Boots=false
+            B:Chestplate=false
+            B:Helmet=false
+            B:Leggings=false
         }
 
         Constantan {
@@ -130,7 +130,7 @@ Equipment {
             B:Bow=true
             B:Excavator=true
             B:FishingRod=true
-            B:Hammer=false
+            B:Hammer=true
             B:Hoe=true
             B:Pickaxe=true
             B:Shears=true
@@ -145,13 +145,13 @@ Equipment {
             B:Bow=true
             B:Excavator=true
             B:FishingRod=true
-            B:Hammer=false
+            B:Hammer=true
             B:Hoe=true
             B:Pickaxe=true
             B:Shears=true
             B:Shield=true
             B:Shovel=true
-            B:Sickle=false
+            B:Sickle=true
             B:Sword=true
         }
 
@@ -231,21 +231,36 @@ Equipment {
         }
 
         Steel {
-            B:Axe=true
+            B:Axe=false
             B:Bow=true
             B:Excavator=true
             B:FishingRod=true
-            B:Hammer=false
-            B:Hoe=true
-            B:Pickaxe=true
+            B:Hammer=true
+            B:Hoe=false
+            B:Pickaxe=false
             B:Shears=true
             B:Shield=true
-            B:Shovel=true
+            B:Shovel=false
             B:Sickle=false
-            B:Sword=true
+            B:Sword=false
         }
 
         Electrum {
+            B:Axe=false
+            B:Bow=false
+            B:Excavator=false
+            B:FishingRod=false
+            B:Hammer=true
+            B:Hoe=false
+            B:Pickaxe=false
+            B:Shears=false
+            B:Shield=false
+            B:Shovel=false
+            B:Sickle=false
+            B:Sword=false
+        }
+
+        Invar {
             B:Axe=false
             B:Bow=false
             B:Excavator=false
@@ -260,34 +275,19 @@ Equipment {
             B:Sword=false
         }
 
-        Invar {
-            B:Axe=true
-            B:Bow=true
-            B:Excavator=true
-            B:FishingRod=true
-            B:Hammer=true
-            B:Hoe=true
-            B:Pickaxe=true
-            B:Shears=true
-            B:Shield=true
-            B:Shovel=true
-            B:Sickle=true
-            B:Sword=true
-        }
-
         Bronze {
-            B:Axe=true
-            B:Bow=true
-            B:Excavator=true
-            B:FishingRod=true
+            B:Axe=false
+            B:Bow=false
+            B:Excavator=false
+            B:FishingRod=false
             B:Hammer=false
-            B:Hoe=true
-            B:Pickaxe=true
-            B:Shears=true
-            B:Shield=true
-            B:Shovel=true
+            B:Hoe=false
+            B:Pickaxe=false
+            B:Shears=false
+            B:Shield=false
+            B:Shovel=false
             B:Sickle=false
-            B:Sword=true
+            B:Sword=false
         }
 
         Constantan {
@@ -310,49 +310,49 @@ Equipment {
     Tool {
 
         Wood {
-            B:Excavator=false
-            B:Hammer=false
-            B:Shears=false
-            B:Sickle=false
+            B:Excavator=true
+            B:Hammer=true
+            B:Shears=true
+            B:Sickle=true
         }
 
         Stone {
-            B:Bow=false
-            B:Excavator=false
-            B:FishingRod=false
-            B:Hammer=false
-            B:Shears=false
-            B:Shield=false
-            B:Sickle=false
+            B:Bow=true
+            B:Excavator=true
+            B:FishingRod=true
+            B:Hammer=true
+            B:Shears=true
+            B:Shield=true
+            B:Sickle=true
         }
 
         Iron {
             B:Bow=true
             B:Excavator=true
             B:FishingRod=true
-            B:Hammer=false
+            B:Hammer=true
             B:Shield=true
-            B:Sickle=false
+            B:Sickle=true
         }
 
         Diamond {
             B:Bow=true
             B:Excavator=true
             B:FishingRod=true
-            B:Hammer=false
+            B:Hammer=true
             B:Shears=true
             B:Shield=true
-            B:Sickle=false
+            B:Sickle=true
         }
 
         Gold {
             B:Bow=true
             B:Excavator=true
             B:FishingRod=true
-            B:Hammer=false
+            B:Hammer=true
             B:Shears=true
             B:Shield=true
-            B:Sickle=false
+            B:Sickle=true
         }
 
     }
@@ -480,11 +480,11 @@ Items {
 
     HorseArmor {
         B:Aluminum=false
-        B:Bronze=true
+        B:Bronze=false
         B:Constantan=false
         B:Copper=true
         B:Electrum=false
-        B:Invar=true
+        B:Invar=false
         B:Lead=false
         B:Nickel=true
         B:Platinum=false
