Disabled Forestry butterfly module for performance reasons

--- a/config/forestry/modules.cfg
+++ b/config/forestry/modules.cfg
@@ -27,7 +27,7 @@ modules {
     B:farming=true
     B:food=true
     B:greenhouse=true
-    B:lepidopterology=true
+    B:lepidopterology=false
     B:mail=true
 
     # for.module.sorting.description
