--- a/config/rftools/rftools.cfg
+++ b/config/rftools/rftools.cfg
@@ -1364,13 +1364,13 @@ powercell {
     I:advancedFactor=4
 
     # The maximum cost factor for extracting energy out of a powercell for blocks in other dimensions or farther away then 10000 blocks
-    D:powerCellCostFactor=1.1
+    D:powerCellCostFactor=100
 
     # At this distance the cost factor will be maximum. This value is also used when power is extracted from cells in different dimensions
-    D:powerCellDistanceCap=10000.0
+    D:powerCellDistanceCap=50.0
 
     # As soon as powercells are not connected this value will be taken as the minimum distance to base the cost factor from
-    D:powerCellMinDistance=100.0
+    D:powerCellMinDistance=20.0
 
     # A multiplier for the distance if RFTools dimensions are involved. If both sides are RFTools dimensions then this multiplier is done twice
     D:powerCellRFToolsDimensionAdvantage=0.5
