Disabled Railcraft's quarried stone generation

--- a/config/railcraft/railcraft.cfg
+++ b/config/railcraft/railcraft.cfg
@@ -560,7 +560,7 @@ worldgen {
         B:firestone=true
 
         # spawns on the surface in forests
-        B:quarried.stone=true
+        B:quarried.stone=false
 
         # spawns beneath surface of deserts, regenerates via bedrock layer block
         B:saltpeter=true
