--- a/config/worsesolars.cfg
+++ b/config/worsesolars.cfg
@@ -13,6 +13,11 @@ general {
         # Disabling this will disallow repairing broken solar panels. [default: true]
         B:canRepair=true
 
+        # The chance per tick that the solar panel will lose durability. This is a "1 out of x" chance. [default: 1]
+        # Min: 1
+        # Max: 2147483647
+        I:decayChance=1
+
         # How much FE the solar panel can contain. [default: 40000]
         I:energyCapacity=40000
 
@@ -26,6 +31,16 @@ general {
         # How long the solar panel will last, in ticks. (20 ticks = 1 second)
         # [default: 24000]
         I:panelDurability=24000
+
+        # Controls how fast the solar panel decays when disabled by redstone, in ticks per durability point.
+        # Note that this does nothing if redstoneControl is set to false.
+        # Set to 0 to completely disable loss when redstone powered. [default: 5]
+        # Min: 0
+        # Max: 2147483647
+        I:poweredOffDecayRate=5
+
+        # If true, the solar panel can be disabled with a redstone signal. [default: false]
+        B:redstoneControl=false
 
         # How much FE it can output to other blocks per tick. [default: 40]
         I:transferRate=40
