--- a/config/apatheticmobs.cfg
+++ b/config/apatheticmobs.cfg
@@ -1,52 +1,101 @@
 # Configuration file
 
 compatibility {
-    # if true, Gaia Guardian will shoot its attacks at you; if false, you'll only get the magic floor and the mobs, which will ignore you [default: false]
     B:gaiaGuardian=false
 }
 
 
 ender_dragon {
-    # if true, ender dragon will attack the player when flying [default: false]
     B:dragonfly=false
-
-    # if true, ender dragon will attack the player when sittingâ€”you should set this to true so you can get dragon's breath! [default: false]
     B:dragonsit=false
 }
 
 
-rules {
-    # if true, mod will ignore excluded mobs; if false, mod will only adjust included mobs [default: true]
-    B:blacklist=true
+general {
 
-    # list of difficulties in which the mod will work if difficultyLock is set to true [default: [easy]]
+    "basic rules" {
+        # List of difficulties in which the mod will work if difficultyLock is set to true.
+        S:"Allowed Difficulties" <
+            easy
+         >
+
+        # If true, mod will not affect mobs in exclusions; if false, mod will only affect mobs in inclusions.
+        B:"Blacklist or Whitelist Option"=true
+
+        # If true, mod will only work on listed difficulties; if false, it will always work.
+        B:"Difficulty Lock Option"=false
+
+        # List of entities that will attack the player if blacklist is enabled.
+        S:"Excluded Mobs" <
+            minecraft:cow
+         >
+
+        # List of entities that will not attack the player if blacklist is disabled.
+        S:"Included Mobs" <
+            minecraft:zombie
+         >
+
+        # If true, mod will only cause mobs to ignore players whitelisted by the command apatheticwhitelist.
+        B:"Player Whitelist Option (Untested)"=false
+
+        # If true, mobs will attack you back; if false, they will never attack you back.
+        B:"Revenge Option"=false
+
+        # If you have revenge enabled: false -> eternal revenge; true -> temporary revenge.
+        B:"Revenge Timer Option"=false
+
+        # If you have the revenge timer enabled, this is how many ticks it will last.
+        # Just because the timer ends doesn't mean the mob will stop attacking you; it may take a bit.
+        # The minimum is 20 ticks (1 second) and the maximum is 10000 ticks (500 seconds). Default is 10 seconds.
+        # Min: 20
+        # Max: 10000
+        I:"Revenge Timer Value"=200
+    }
+
+    "boss rules" {
+        # If true, chaos dragon will send projectiles at you. If false, it will not.
+        B:"Chaos Dragon Projectile Option"=false
+
+        # If true, ender dragon will attack the player when flying.
+        B:"Dragon Flying Attack Option"=false
+
+        # If true, ender dragon will attack the player when sitting—you should set this to true so you can get dragon's breath!
+        B:"Dragon Sitting Attack Option"=false
+
+        # If true, Gaia Guardian will send attacks at you and the magic floor will exist. If false, it will only spawn mobs.
+        B:"Gaia Attack Option"=false
+
+        # If true, any mobs with the flag 'isBoss' will be ignored by this mod. So Eldritch Guardian, for example.
+        B:"General Boss Option"=false
+
+        # If true, wither will attack you; if false, wither will neither attack you nor, well, anything
+        B:"Wither Attack Option"=false
+
+        # If true, wither will take revenge.
+        B:"Wither Revenge Option"=false
+    }
+
+}
+
+
+rules {
+    B:blacklist=true
     S:difficulties <
         easy
      >
-
-    # if true, mod will only work on listed difficulties; if false, it will always work [default: false]
     B:difficultyLock=true
-
-    # list of entities that will still attack the player [default: [minecraft:cow]]
     S:exclusions <
         minecraft:cow
      >
-
-    # list of entities that will not attack the player [default: [minecraft:zombie]]
     S:inclusions <
         minecraft:zombie
      >
-
-    # if true, mobs will attack you back; if false, they will never attack you back [default: false]
     B:revenge=true
 }
 
 
 wither {
-    # if true, wither will attack you; if false, wither will neither attack you nor, well, anything [default: false]
     B:witherAttacks=false
-
-    # if true, wither will take revenge [default: false]
     B:witherRevenge=false
 }
 
