--- a/config/botaniatweaks.cfg
+++ b/config/botaniatweaks.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 5
+~CONFIG_VERSION: 6
 
 balance {
     # How does the Orechid determine its cost and speed to run?
@@ -9,8 +9,20 @@ balance {
     # "force_no_gog": The Orechid will be expensive to run, even in Garden of Glass mode. [default: default]
     S:cheapOrechid=default
 
+    # How many bookshelves a Gaia Pylon counts for at an enchanting table. [range: 0 ~ 50, default: 15]
+    I:gaiaPylonEnchantPower=15
+
+    # Crank up this setting to make the Key of the King's Law super OP, if you want. This number is a multiplier for the Key's usual damage value of 10 hearts per hit. Note that setting it to 0 does not disable all damage since the Key's projectiles create a ton of explosions. [range: 0.0 ~ 1337.0, default: 1.0]
+    S:keyDamageScale=1.0
+
+    # How many bookshelves a Mana Pylon counts for at an enchanting table. [range: 0 ~ 50, default: 8]
+    I:manaPylonEnchantPower=8
+
     # The default mana output of the Manastorm Charge is multiplied by this amount. Setting this to a value higher than around ~1.38889ish allows for the "Manastorm Reactor" build to be profitable. [range: 1.0 ~ 15.0, default: 1.0]
     S:manastormScaleFactor=8.0
+
+    # How many bookshelves a Natura Pylon counts for at an enchanting table. [range: 0 ~ 50, default: 15]
+    I:naturaPylonEnchantPower=15
 
     # A multiplier for the amount of mana that the Rosa Arcana produces when soaking up XP orbs from the world. This doesn't affect the amount of mana obtained from the XP bars of nearby players; only in-world orb entities are affected. [range: 1.0 ~ 8.0, default: 1.0]
     S:roseArcanaOrbMultiplier=1.0
@@ -103,6 +115,15 @@ etc {
     # If true, placing a corporea-related block will automatically decorate it with corporea sparks and floral powder, unless you're sneaking. [default: false]
     B:autoCorporeaSpark=false
 
+    # The blocks considered "corporea-related" for the "autoCorporeaSpark" feature. [default: [botania:corporeaindex], [botania:corporeafunnel], [botania:corporeainterceptor], [botania:corporeacrystalcube], [incorporeal:corporea_liar]]
+    S:corporeticBlocks <
+        botania:corporeaindex
+        botania:corporeafunnel
+        botania:corporeainterceptor
+        botania:corporeacrystalcube
+        incorporeal:corporea_liar
+     >
+
     # If "true", the custom terrestrial agglomeration plate will try to "collect" the items on top of it, resolving issues relating to "2x apple" being treated differently from "apple, apple". This operation can be expensive, so here is your option to disable it, if you have a lot of agglomeration recipes that don't use this feature.
     # This is kind of a hack fix; if I get around to writing a more performant agglomeration recipe matcher, I'll remove this option. [default: true]
     B:doCustomAggglomerationPreprocessing=true
@@ -121,9 +142,6 @@ etc {
 
     # Can sheep eat the custom Botania grass blocks to regrow their wool? [default: false]
     B:sheepEatCustomGrass=true
-
-    # Can players till the custom Botania grass blocks into farmland? [default: false]
-    B:tillCustomGrass=false
 }
 
 
