--- a/config/crossroads.cfg
+++ b/config/crossroads.cfg
@@ -42,9 +42,12 @@ internal {
 misc {
     # Disabling these recipes will NOT change the documentation at all. Responsibility for warning users of disabled recipes is left to pack makers.
     B:"Add recipes for bobo items? (Default true)"=true
+    S:"Blocks that time beams shouldn't affect. Should be in the format 'modid:blockregistryname', ex. 'minecraft:obsidian' or 'crossroads:block_salt'." <
+     >
 
     # If false, all heat cable overheating effects are replaced with burning (Default true)
     B:"Cable Overheat Effects"=true
+    B:"Can time beams accelerate time? (Default true)."=true
     B:"Enable rain idol? (Default true)"=true
     S:"Plant types that can not be grown by a potential beam. Should be in format 'modid:blockregistryname', ex. minecraft:wheat" <
      >
