--- a/config/lightbendingadditions.cfg
+++ b/config/lightbendingadditions.cfg
@@ -2,18 +2,18 @@
 
 blockregistry {
     # If enabled, the advanced splitter will be available in game.
-    # Default: null
+    # Default: true
     B:enable_adv_splitter=true
 
     # If enabled, the advanced splitter will be available in game.
-    # Default: null
+    # Default: true
     B:enable_mini_red_laser=true
 }
 
 
 general {
     # If enabled, the advanced splitter can color split mundane beams.
-    # Default: null
+    # Default: false
     B:adv_splitter_can_split_mundane=false
 }
 
