--- a/config/mystcraft/balance.cfg
+++ b/config/mystcraft/balance.cfg
@@ -65,6 +65,7 @@ baselining {
     I:"colored_water:water_silver_0"=0
     I:"colored_water:water_white_0"=0
     I:"colored_water:water_yellow_0"=0
+    I:"contenttweaker:brine_0"=0
     I:"contenttweaker:crude_steel_0"=0
     I:"contenttweaker:impuresteel_0"=0
     I:"contenttweaker:irradiated_blood_0"=0
@@ -1337,6 +1338,11 @@ fluids {
     S:fluid.boron_nitride_solution.instability.factor_accessibility=
     S:fluid.boron_nitride_solution.instability.factor_flat=
     S:fluid.boron_nitride_solution.seabanned=
+    S:fluid.brine.cardrank=
+    S:fluid.brine.grammar=
+    S:fluid.brine.instability.factor_accessibility=
+    S:fluid.brine.instability.factor_flat=
+    S:fluid.brine.seabanned=
     S:fluid.calcium_sulfate_solution.cardrank=
     S:fluid.calcium_sulfate_solution.grammar=
     S:fluid.calcium_sulfate_solution.instability.factor_accessibility=
