--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -932,6 +932,7 @@ symbol {
     }
 
     contenttweaker {
+        B:modmat_brine_0.enabled=true
         B:modmat_crude_steel_0.enabled=false
         B:modmat_impuresteel_0.enabled=false
         B:modmat_irradiated_blood_0.enabled=false
