--- a/config/plustic.cfg
+++ b/config/plustic.cfg
@@ -14,6 +14,8 @@ materials {
 
     # Set to false to prevent Bloodwood from being loaded [default: true]
     B:"Enable material bloodwood_plustic"=true
+
+    # Set to false to prevent Certus Quartz from being loaded [default: true]
     B:"Enable material certusquartz_plustic"=true
 
     # Set to false to prevent Darkwood from being loaded [default: true]
@@ -30,6 +32,8 @@ materials {
 
     # Set to false to prevent Flamestring from being loaded [default: true]
     B:"Enable material flamestring_plustic"=true
+
+    # Set to false to prevent Fluix Crystal from being loaded [default: true]
     B:"Enable material fluixcrystal_plustic"=true
 
     # Set to false to prevent Fusewood from being loaded [default: true]
@@ -59,14 +63,8 @@ materials {
 
     # Set to false to prevent Nickel from being loaded [default: true]
     B:"Enable material nickel"=true
-
-    # Set to false to prevent Osgloglas from being loaded [default: true]
     B:"Enable material osgloglas"=true
-
-    # Set to false to prevent Osmiridium from being loaded [default: true]
     B:"Enable material osmiridium"=true
-
-    # Set to false to prevent Osmium from being loaded [default: true]
     B:"Enable material osmium"=true
 
     # Set to false to prevent Peridot from being loaded [default: true]
@@ -80,11 +78,7 @@ materials {
 
     # Set to false to prevent Psimetal from being loaded [default: true]
     B:"Enable material psimetal"=true
-
-    # Set to false to prevent Refined Glowstone from being loaded [default: true]
     B:"Enable material refinedglowstone"=true
-
-    # Set to false to prevent Refined Obsidian from being loaded [default: true]
     B:"Enable material refinedobsidian"=true
 
     # Set to false to prevent Ruby from being loaded [default: true]
@@ -217,6 +211,9 @@ tools {
     # Multiply combo value by this to calculate bonus damage [range: 0.0 ~ 3.4028235E38, default: 1.25]
     S:"Katana combo multiplier"=1.25
 
+    # How much energy is used, by default, per laser attack [range: 0 ~ 2147483647, default: 100]
+    I:"Laser Gun Energy consumed"=100
+
     # Should boosted damage of Katana change smoothly from material to material? [default: false]
     B:"Smooth Katana progression"=false
 }
@@ -232,13 +229,13 @@ tweaks {
     # Otherwise: do *not* load the Botania module for PlusTiC, overriding other settings. [default: true]
     B:"Force out Natural Pledge TiC materials"=true
 
-    # Valid ore dictionary values for Fruit Salad [default: [Ljava.lang.String;@6a4175fa]
+    # Valid ore dictionary values for Fruit Salad [default: [cropApple], [listAllfruit]]
     S:"Fruits oredict list" <
         cropApple
         listAllfruit
      >
 
-    # Enter in the format "modid:name;meta" (leave meta blank for zero metadata) [default: [Ljava.lang.String;@f5eabc0]
+    # Enter in the format "modid:name;meta" (leave meta blank for zero metadata) [default: [apple], [golden_apple;32767], [melon], [chorus_fruit]]
     S:"Fruits stack list" <
         apple
         golden_apple;32767
@@ -252,7 +249,7 @@ tweaks {
     I:"Modifier values for Botanical" <
      >
 
-    # Objects that the Trash modifier will generate; enter in the format "weight|modid:name;meta" (leave meta blank for zero metadata) [default: [Ljava.lang.String;@1bc300a1]
+    # Objects that the Trash modifier will generate; enter in the format "weight|modid:name;meta" (leave meta blank for zero metadata) [default: [20|coal], [5|slime_ball], [10|saddle], [5|tconstruct:edible;1], [1|emerald], [3|melon]]
     S:"Trash generation" <
         20|coal
         5|slime_ball
