--- a/config/pneumaticcraft/thirdparty.cfg
+++ b/config/pneumaticcraft/thirdparty.cfg
@@ -3,6 +3,7 @@
   "enabled_mods": {
     "theoneprobe": true,
     "immersiveengineering": true,
+    "baubles": true,
     "computercraft": true,
     "waila": true,
     "opencomputers|core": true,
@@ -13,6 +14,7 @@
     "mcmultipart": true,
     "enderio": true,
     "immersivepetroleum": true,
+    "mekanism": true,
     "igwmod": true,
     "ic2": true,
     "opencomputers": true,
