--- a/config/prodigy_tech.cfg
+++ b/config/prodigy_tech.cfg
@@ -16,14 +16,7 @@ automation {
 }
 
 
-##########################################################################################################
-# energion
-#--------------------------------------------------------------------------------------------------------#
-# Energion configuration
-##########################################################################################################
-
 energion {
-    # The time (in ticks) a simple Energion Battery will last, other values are derived from this one [range: 20 ~ 1728000, default: 12000]
     I:energionBatteryDuration=12000
 }
 
@@ -53,15 +46,14 @@ machines {
     # 1 means every tick, 20 means once every second and so on
     # Lower value will make them more reactive to crystal growing, but will make them sligtly laggier when idle [range: 1 ~ 200, default: 60]
     I:automaticCrystalCutterIdleTime=60
-
-    # How many Energion Dust equivalent can the Battery Replenisher hold in its internal buffer [range: 1 ~ 64, default: 3]
     I:batteryReplenisherMaxEnergion=3
-
-    # How much energion ticks can the Battery Replenisher fill per tick [range: 1 ~ 1000000, default: 10]
     I:batteryReplenisherSpeed=10
 
     # The base amount of time (in ticks) that the Blower Furnace takes to process 1 item [range: 1 ~ 3000, default: 300]
     I:blowerFurnaceProcessTime=300
+
+    # The base amount of time (in ticks) that the Heat Accumulator takes to charge 20 ticks of an Heat Capacitor [range: 20 ~ 200, default: 30]
+    I:capacitorChargerChargeTime=30
 
     # Automatically generate Heat Sawmill recipes to cut wood into planks
     # If false, only recipes for vanilla logs and zorra will be registered [default: true]
@@ -78,6 +70,9 @@ machines {
 
     # The chance that an item burned in the Incinerator gives Ash [range: 0.0 ~ 1.0, default: 1.0]
     S:incineratorChance=1.0
+
+    # Show the Incinerator recipe for Ash in JEI [default: true]
+    B:incineratorJEI=true
 
     # The base amount of time (in ticks) that the Incinerator takes to process 1 item [range: 1 ~ 3000, default: 200]
     I:incineratorProcessTime=200
@@ -123,6 +118,21 @@ machines {
 
 
 ##########################################################################################################
+# power
+#--------------------------------------------------------------------------------------------------------#
+# Power generation configuration
+##########################################################################################################
+
+power {
+    # The time (in ticks) one Energion Dust lasts in the Energion Aeroheater [range: 20 ~ 1728000, default: 2000]
+    I:energionDuration=2000
+
+    # The time (in ticks) a fully charged Heat Capacitor lasts [range: 20 ~ 1728000, default: 12000]
+    I:heatCapacitorDuration=12000
+}
+
+
+##########################################################################################################
 # zorra altar
 #--------------------------------------------------------------------------------------------------------#
 # Zorra Altar configuration
@@ -134,7 +144,7 @@ machines {
     I:altarBonusLvl=3
 
     # A multiplier applied to all enchantment costs on the Zorra Altar
-    # For example 1.5 means that everything costs 50% more than the base amount [range: 0.0 ~ 10.0, default: 1.0]
+    # For example 1.5 means that everything costs 50% more than the base amount [range: 0.0 ~ 10.0, default: 0.6]
     S:altarCostMult=1.0
 
     # Minimum random level deviation for enchantment cost on the Zorra Altar
