--- a/config/unlimitedchiselworks.cfg
+++ b/config/unlimitedchiselworks.cfg
@@ -26,6 +26,10 @@ enabled {
     B:"integrateddynamics:menril_planks"=true
     B:"natura:nether_planks"=true
     B:"natura:overworld_planks"=true
+    B:"prodigytech:charred_cobblestone"=true
+    B:"prodigytech:charred_stonebricks"=true
+    B:"prodigytech:particle_board_planks"=true
+    B:"prodigytech:zorra_planks"=true
     B:"quark:biome_cobblestone"=true
     B:"quark:biotite_block"=true
     B:"quark:duskbound_block"=true
