Bosses are always hostile, even on easy

--- a/config/apatheticmobs.cfg
+++ b/config/apatheticmobs.cfg
@@ -1,4 +1,4 @@
-# Configuration file
+﻿# Configuration file
 
 compatibility {
     B:gaiaGuardian=false
@@ -66,7 +66,7 @@ general {
         B:"Gaia Attack Option"=false
 
         # If true, any mobs with the flag 'isBoss' will be ignored by this mod. So Eldritch Guardian, for example.
-        B:"General Boss Option"=false
+        B:"General Boss Option"=true
 
         # If true, wither will attack you; if false, wither will neither attack you nor, well, anything
         B:"Wither Attack Option"=false
