Disabled huge trees Mystcraft page

--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -166,7 +166,7 @@ symbol {
         B:featuresmalldummy.enabled=true
         B:floatislands.enabled=true
         B:genspikes.enabled=true
-        B:hugetrees.enabled=true
+        B:hugetrees.enabled=false
         B:lakesdeep.enabled=true
         B:lakessurface.enabled=true
         B:lightingbright.enabled=true
