Fixed apathetic mobs

--- a/config/apatheticmobs.cfg
+++ b/config/apatheticmobs.cfg
@@ -1,4 +1,4 @@
-# Configuration file
+﻿# Configuration file
 
 compatibility {
     B:gaiaGuardian=false
@@ -39,7 +39,7 @@ general {
         B:"Player Whitelist Option (Untested)"=false
 
         # If true, mobs will attack you back; if false, they will never attack you back.
-        B:"Revenge Option"=false
+        B:"Revenge Option"=true
 
         # If you have revenge enabled: false -> eternal revenge; true -> temporary revenge.
         B:"Revenge Timer Option"=false
@@ -57,19 +57,19 @@ general {
         B:"Chaos Dragon Projectile Option"=false
 
         # If true, ender dragon will attack the player when flying.
-        B:"Dragon Flying Attack Option"=false
+        B:"Dragon Flying Attack Option"=true
 
         # If true, ender dragon will attack the player when sitting—you should set this to true so you can get dragon's breath!
-        B:"Dragon Sitting Attack Option"=false
+        B:"Dragon Sitting Attack Option"=true
 
         # If true, Gaia Guardian will send attacks at you and the magic floor will exist. If false, it will only spawn mobs.
-        B:"Gaia Attack Option"=false
+        B:"Gaia Attack Option"true
 
         # If true, any mobs with the flag 'isBoss' will be ignored by this mod. So Eldritch Guardian, for example.
         B:"General Boss Option"=true
 
         # If true, wither will attack you; if false, wither will neither attack you nor, well, anything
-        B:"Wither Attack Option"=false
+        B:"Wither Attack Option"=true
 
         # If true, wither will take revenge.
         B:"Wither Revenge Option"=false
