--- a/config/apatheticmobs.cfg
+++ b/config/apatheticmobs.cfg
@@ -1,4 +1,4 @@
-﻿# Configuration file
+# Configuration file
 
 compatibility {
     B:gaiaGuardian=false
@@ -63,7 +63,7 @@ general {
         B:"Dragon Sitting Attack Option"=true
 
         # If true, Gaia Guardian will send attacks at you and the magic floor will exist. If false, it will only spawn mobs.
-        B:"Gaia Attack Option"true
+        B:"Gaia Attack Option"=false
 
         # If true, any mobs with the flag 'isBoss' will be ignored by this mod. So Eldritch Guardian, for example.
         B:"General Boss Option"=true
