--- a/config/mystcraft/balance.cfg
+++ b/config/mystcraft/balance.cfg
@@ -633,6 +633,8 @@ baselining {
     I:"thaumcraft:flux_goo_7"=0
     I:"thaumcraft:liquid_death_0"=0
     I:"thaumcraft:purifying_fluid_0"=0
+    I:"thaumicbases:pyro_0"=0
+    I:"thaumicwonders:fluid_quicksilver_0"=0
     I:"thermalfoundation:fluid_aerotheum_0"=0
     I:"thermalfoundation:fluid_crude_oil_0"=0
     I:"thermalfoundation:fluid_cryotheum_0"=0
@@ -2052,6 +2054,11 @@ fluids {
     S:fluid.fluid_moltenxp.instability.factor_accessibility=
     S:fluid.fluid_moltenxp.instability.factor_flat=
     S:fluid.fluid_moltenxp.seabanned=
+    S:fluid.fluid_quicksilver.cardrank=
+    S:fluid.fluid_quicksilver.grammar=
+    S:fluid.fluid_quicksilver.instability.factor_accessibility=
+    S:fluid.fluid_quicksilver.instability.factor_flat=
+    S:fluid.fluid_quicksilver.seabanned=
     S:fluid.fluids.integrateddynamics.liquidchorus.cardrank=
     S:fluid.fluids.integrateddynamics.liquidchorus.grammar=
     S:fluid.fluids.integrateddynamics.liquidchorus.instability.factor_accessibility=
@@ -3179,6 +3186,11 @@ fluids {
     S:fluid.purifying_fluid.instability.factor_accessibility=
     S:fluid.purifying_fluid.instability.factor_flat=
     S:fluid.purifying_fluid.seabanned=
+    S:fluid.pyro.cardrank=
+    S:fluid.pyro.grammar=
+    S:fluid.pyro.instability.factor_accessibility=
+    S:fluid.pyro.instability.factor_flat=
+    S:fluid.pyro.seabanned=
     S:fluid.pyrotheum.cardrank=
     S:fluid.pyrotheum.grammar=
     S:fluid.pyrotheum.instability.factor_accessibility=
