--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -987,6 +987,14 @@ symbol {
         B:modmat_witchwater_0.enabled=false
     }
 
+    thaumicwonders {
+        B:modmat_fluid_quicksilver_0.enabled=true
+    }
+
+    thaumicbases {
+        B:modmat_pyro_0.enabled=true
+    }
+
 }
 
 
