--- a/config/T145/MetalChests.cfg
+++ b/config/T145/MetalChests.cfg
@@ -3,17 +3,20 @@
 general {
     # Whether or not you want to recieve an in-game notification if an update is available.
     B:checkForUpdates=true
-
-    # If Thaumcraft is installed, whether or not you want to enable the Hungry Metal Chests and their upgrades.
     B:enableHungryMetalChests=true
+
+    # If Thaumcraft is installed, whether or not you want to enable the Metal Hungry Chests.
+    B:enableMetalHungryChests=true
+
+    # If Refined Relocation 2 is installed, whether or not you want to enable the Metal Hungry Sorting Chests.
+    B:enableMetalHungrySortingChests=true
 
     # Whether or not you want to enable the Minecarts with Metal Chests.
     B:enableMinecarts=true
-
-    # If Refined Relocation 2 is installed, whether or not you want to enable the Hungry Sorting Metal Chests.
     B:enableSortingMetalChests=true
 
-    # Whether or not metal chest models are like the vanilla chest; black in the middle.
+    # Whether or not all metal chest models are like the vanilla chest; black in the middle.
+    # * Hollow textures contributed by phyne
     B:hollowModelTextures=true
 }
 
